# scientific-python-skills

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml
prompts/: next-batch-team-lead.md
research/icechunk/: docs_summary.md  review.md  topic_summary.json
research/matplotlib/: docs_summary.md  review.md  topic_summary.json
research/numpy/: docs_summary.md  review.md  topic_summary.json
research/pandas/: docs_summary.md  review.md  topic_summary.json
research/xarray/: docs_summary.md  review.md  topic_summary.json
research/zarr/: docs_summary.md  review.md  topic_summary.json
scripts/: fetch_issues.sh  summarize_topics.py
skills/: TEMPLATE.md  icechunk.md  matplotlib.md  numpy.md  pandas.md  xarray.md  zarr-v2-v3-migration.md  zarr.md
skills/icechunk/: SKILL.md
skills/matplotlib/: SKILL.md
skills/numpy/: SKILL.md
skills/pandas/: SKILL.md
skills/xarray/: SKILL.md
skills/zarr/: SKILL.md
tests/combined_test/: REPORT.md  test_combined_skill.py
tests/icechunk_test/: REPORT.md  test_icechunk_skill.py
tests/matplotlib_test/: REPORT.md  test_matplotlib_skill.py
tests/numpy_test/: REPORT.md  test_numpy_skill.py
tests/pandas_test/: REPORT.md  test_pandas_skill.py
tests/xarray_test/: REPORT.md  test_xarray_skill.py
tests/zarr_test/: REPORT.md  test_zarr_skill.py
